# outage-manager

./: .env  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml.sample  install.sh  pyproject.toml  requirements.txt  run.sh  setup.sh
outage-manager/: bot.py  emoji.py  messages.py  parser.py  utils.py
outage-manager/db/: __init__.py  mongo.py
outage-manager/db/entity/: __init__.py
outage-manager/db/entity/core/: __init__.py  document.py  operators.py  query.py
outage-manager/tests/: conftest.py  test_db.py
